# DetectionforRM2022

./: CMakeLists.txt  README.md  detector.cpp  detector.h  main.cpp  start.sh
config/: debug_config.yaml  operator.yaml  robot_param.yaml  run_config.yaml
ksconnect/: ksconnect.cpp  ksconnect.h
light/: light.cpp  light.h  readme.txt
usart/: usart.cpp  usart.h
video/: best.mapping  best.xml
